    - Fixed some of Bowser's addresses not resetting upon Retry which could cause unintended effects, like him throwing Magikoopas immediately when re-entering the boss fight (thanks to gui for reporting this).
    - Fixed lightning effect still happening while the Retry prompt is active (only when using !prompt_freeze = 2).

v0.4.2:
    - Fixed pipe entrance timer being inconsistent when respawning if dying while riding Yoshi (thanks to gui for reporting this).

v0.4.1:
    - Moved the "lose_lives" table in "tables.asm" after other tables, since it's the least important one.
    - Added "disable_room_cp_sfx" table in "tables.asm" to avoid playing the room entrance checkpoint SFX in certain sublevels.
    - Improved SFX echo handling:
      - Now the SFX echo will always work the first time entering a room, even if the echo delay is very high.
      - Now the SFX echo will stay enabled even when changing music in the middle of the level (assuming the new music doesn't disable echo altogether). This is most notable for P-Switch and Starman songs, which will keep the level's echo, and thus also the SFX echo, while (and after) they play.
    - Added the !infinite_lives setting back, to more easily toggle between infinite and finite lives. The lose_lives table can still be used to prevent life loss in some levels when using !infinite_lives = 0.
    - Fixed compilation error introduced in v0.3.3, when using !sram_feature = 1 and the SRAM+/BW-RAM+ patch is installed in the ROM.
    - Moved Retry's SRAM tables to a separate "sram_tables.asm" file for more simplicity of use and consistency, and made it insert only when using !sram_feature = 1 to save some ROM space.
    - Changed checks for ObjecTool, Lunar Magic v3.0+, Lunar Magic Sprite 19 Fix, AddmusicK, PIXI and Individual Dragon Coin Save from compile time to run time, so Retry should work fine if those are inserted after it.